Implementations/Additions: - Theme Switching - Static utility class to store selected theme - custom switch for turning dark mode on/off - Settings fragment created - Home Fragment now acts as Capture Mode - Users can now take pictures via capture mode. Pictures taken will be displayed on an image view. - The image view shouldn't clear on phone rotation or while users are temporarily off the app

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,4 +16,10 @@
         android:name="com.example.myapplication.ui.gallery.GalleryFragment"
         android:label="@string/menu_manage"
         tools:layout="@layout/fragment_gallery" />
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.myapplication.ui.settings.SettingsFragment"
+        android:label="@string/menu_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
