--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:background="?attr/backgroundColor">
 
     <include
         layout="@layout/app_bar_main"
@@ -20,5 +21,8 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        android:background="?attr/navMenuBackgroundColour"
+        app:itemIconTint="@color/nav_menu_item"
+        app:itemTextColor="@color/nav_menu_item"/>
 </androidx.drawerlayout.widget.DrawerLayout>
