--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,10 @@
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_manage" />
+
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/ic_menu_settings"
+            android:title="SETTINGS" />
     </group>
 </menu>
