--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,46 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Light Mode Theme -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">@color/lightGrey</item>
+        <item name="textColor">@color/black</item>
+        <item name="tintColor">@color/white</item>
+        <item name="buttonColor">@color/colorAccent</item>
+        <item name="navMenuBackgroundColour">@color/lightGrey</item>
+        <item name="navMenuIconColours">@color/darkGrey2</item>
+        <item name="toolBarColour">@color/colorPrimary</item>
+        <item name="editTextBackgroundColour">@color/lightGrey</item>
+        <item name="editTextOutlineColour">@color/colorPrimary</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
     </style>
+
+    <!-- Dark Mode Theme -->
+    <style name="DarkTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/darkGrey2</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundColor">@color/darkGrey1</item>
+        <item name="textColor">@color/white</item>
+        <item name="tintColor">@color/white</item>
+        <item name="buttonColor">@color/colorAccent</item>
+        <item name="navMenuBackgroundColour">@color/darkGrey2</item>
+        <item name="navMenuIconColours">@color/lightGrey</item>
+        <item name="toolBarColour">@color/colorPrimary</item>
+        <item name="editTextBackgroundColour">@color/grey2</item>
+        <item name="editTextOutlineColour">@color/colorPrimary</item>
+        <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+    </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
