- Created custom list adapter for displaying dataset information in a list view. This list adapter uses the view holder design pattern for performance improvements. Tested this by retrieving the list of datasets from the API and checking whether I can see the dataset information.
- Fixed the name of "User Friendly Data Learning" to "User-Friendly Deep Learning"

- Fixed the bug where moving back from settings wouldn't change the toolbar name to capture.

--- a/app/src/main/res/layout/dataset_display.xml
+++ b/app/src/main/res/layout/dataset_display.xml
@@ -24,19 +24,25 @@
             android:padding="5dp">
 
             <TextView
+                android:id="@+id/dataseName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="DATASET NAME"/>
+                android:text="DATASET NAME"
+                android:textColor="?attr/textColor"/>
 
             <TextView
+                android:id="@+id/projectName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Project"/>
+                android:text="Project"
+                android:textColor="?attr/textColor"/>
 
             <TextView
+                android:id="@+id/datasetTags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tag(s)"/>
+                android:text="Tag(s)"
+                android:textColor="?attr/textColor"/>
 
         </LinearLayout>
 
