--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -21,11 +21,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent="0.5"
+            app:layout_constraintWidth_percent="1"
             android:textSize="15dp"
             android:textStyle="bold"
             android:gravity="center"
             android:text="label"
+            android:textColor="?attr/textColor"
             app:layout_constraintTop_toBottomOf="@id/gridImageView"
             app:layout_constraintLeft_toLeftOf="@id/gridImageView"/>
 
