--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
         <item name="editTextBackgroundColour">@color/lightGrey</item>
         <item name="editTextOutlineColour">@color/colorPrimary</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <!-- Dark Mode Theme -->
@@ -34,6 +35,7 @@
         <item name="editTextBackgroundColour">@color/grey2</item>
         <item name="editTextOutlineColour">@color/colorPrimary</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimationTransition</item>
+        <item name="windowActionModeOverlay">true</item>
     </style>
 
     <style name="WindowAnimationTransition">
