- Changed custom list adapter from a standard Adapter to a recycler view adapter for better performance. - Images will load into the recycler view as soon as they are processed (added to the images list) instead of waiting for all images to process and then adding them all at once. This means users will be able to see images appear much quicker.

--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -5,15 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.images.ImagesFragment">
 
-    <GridView
-        android:id="@+id/imageGrid"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/imageRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="2"
-        android:verticalSpacing="2dp"
-        android:horizontalSpacing="2dp"
-        android:stretchMode="columnWidth"
-        android:gravity="center"></GridView>
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
