--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="0.5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -26,8 +27,7 @@
         android:buttonTint="@color/colorPrimary"/>
 
 
-
-        <TextView
+    <TextView
             android:id="@+id/gridTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -39,6 +39,7 @@
             android:text="label"
             android:textColor="?attr/textColor"
             app:layout_constraintTop_toBottomOf="@id/gridImageView"
-            app:layout_constraintLeft_toLeftOf="@id/gridImageView"/>
+            app:layout_constraintLeft_toLeftOf="@id/gridImageView"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
