--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,6 +36,6 @@
     <fragment
         android:id="@+id/imagesFragment"
         android:name="com.example.myapplication.ui.images.ImagesFragment"
-        android:label="fragment_images"
+        android:label="@string/fragment_images"
         tools:layout="@layout/fragment_images" />
 </navigation>
