--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -10,5 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="bottom"/>
+
 
 </FrameLayout>
