--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -17,5 +17,17 @@
         android:visibility="gone"
         android:layout_gravity="bottom"/>
 
+    <ImageButton
+        android:id="@+id/fab_add_dataset"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/add_image"
+        android:contentDescription="@string/add_image"
+        android:background="@drawable/floating_button_background"
+        android:elevation="8dp" />
+
 
 </FrameLayout>
