- Images successfully retrieved from gallery - A popup will be displayed once a user has selected images from gallery in which users will have to give each selected image a label.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey">#818181</color>
     <color name="orange">#FF8C00</color>
     <color name="grey2">#202020</color>
+    <color name="imageExcessBackground">#202020</color>
 </resources>
