--- a/app/src/main/res/layout/gallery_selection_label.xml
+++ b/app/src/main/res/layout/gallery_selection_label.xml
@@ -72,6 +72,7 @@
         android:layout_marginBottom="50dp"/>
 
     <Button
+        android:id="@+id/saveImages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_design"
