Implementations/changes: - refactored lazy load & removed obsolete methods - now we are no longer using categories to retrieve image names, instead we are retrieving image name list. - Can select images from gallery and label them. - labelled images are now being successfully stored in the backend - if a user selects images from gallery and adds them to an empty dataset, automatically load in images to recyclerview until page limit is met - added a placeholder image to capture

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
+        android:src="@drawable/ic_baseline_image_24"
         android:layout_above="@id/captureImageButton" />
 
     <Button
