Fixed website link Locked to portrait Corrected errors to do with package name change

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,4 +38,9 @@
         android:name="io.github.waikato_ufdl.ui.images.ImagesFragment"
         android:label="@string/fragment_images"
         tools:layout="@layout/fragment_images" />
+
+    <activity
+        android:id="@+id/website"
+        app:action="android.intent.action.VIEW"
+        app:data="@string/application_url"/>
 </navigation>
