Modified the manage datasets to use Recyclerview instead of listview for performance benefits. - Removed datasetListAdapter - Implemented datasetRecyclerAdapter & recyclerViewClickListener interface. - Modified GalleryFragment to use the new recylerview and recyclerView adapter instead.

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -7,11 +7,20 @@
     tools:context="io.github.waikato_ufdl.ui.gallery.GalleryFragment"
     android:orientation="vertical">
 
+    <!--
     <ListView
         android:id="@+id/list_view_datasets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:choiceMode="singleChoice"/>
+        -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/datasets_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:choiceMode="singleChoice"/>
+
 
     <ImageButton
         android:id="@+id/fab_add_dataset"
