Changes/Implementation: - Renamed GalleryFragment and fragment_gallery.xml to ManageFragment and fragment_manage.xml as it makes more sense.
- Refactored settings fragment. When users enter their details and click login, there will be an attempt to connect to the server and then an attempt to test the connection via an API request. If the API request succeeds, the user will be presented with a success dialog which will navigate them to another fragment on button press. Alternatively, if the API request fails, the user will be shown an error dialog prompting them to check their details.

- Also implemented a connection test method in the manage fragment which will only display if the connection fails. The dialog will have a button which will allow users to navigate to the settings fragment to check their details.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -117,7 +117,7 @@
         android:layout_marginBottom="50dp"
         android:background="@drawable/button_design"
         android:padding="10dp"
-        android:text="Save &amp; Exit"
+        android:text="Login"
         android:textSize="@dimen/buttonTextSize"
         android:layout_below="@id/themeSwitch"/>
 
