--- a/app/src/main/res/layout/fragment_manage.xml
+++ b/app/src/main/res/layout/fragment_manage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="io.github.waikato_ufdl.ui.gallery.GalleryFragment"
+    tools:context="io.github.waikato_ufdl.ui.manage.ManageFragment"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
