--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,9 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="io.github.waikato_ufdl.ui.gallery.GalleryFragment"
+        android:name="io.github.waikato_ufdl.ui.manage.ManageFragment"
         android:label="@string/menu_manage"
-        tools:layout="@layout/fragment_gallery" >
+        tools:layout="@layout/fragment_manage" >
         <action
             android:id="@+id/action_nav_gallery_to_imagesFragment"
             app:destination="@id/imagesFragment" />
