--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundColor"
+    tools:viewBindingIgnore="true" >
 
     <include
         layout="@layout/app_bar_main"
