--- a/app/src/main/res/layout/dataset_display.xml
+++ b/app/src/main/res/layout/dataset_display.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:viewBindingIgnore="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,15 +15,15 @@
         <ImageView
             android:id="@+id/dataset_folder"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="64dp"
             android:src="@drawable/dataset_folder"
             android:layout_weight="2"/>
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="3"
+            android:layout_weight="4"
             android:padding="5dp">
 
             <TextView
@@ -28,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="DATASET NAME"
-                android:textColor="?attr/textColor"/>
+                android:textColor="?attr/textColor" />
 
             <TextView
                 android:id="@+id/projectName"
