--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
-    android:id="@+id/galleryImage"
+<ImageView android:id="@+id/galleryImage"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/imageExcessBackground">
+    android:background="@color/imageExcessBackground"
+    tools:viewBindingIgnore="true"
+    xmlns:tools="http://schemas.android.com/tools">
 </ImageView>
