--- a/app/src/main/res/layout/image_display.xml
+++ b/app/src/main/res/layout/image_display.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="0.5dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:viewBindingIgnore="true">
 
     <ImageView
         android:id="@+id/gridImageView"
@@ -24,7 +26,7 @@
         app:layout_constraintBottom_toBottomOf="@id/gridImageView"
         app:layout_constraintRight_toRightOf="@id/gridImageView"
         android:visibility="gone"
-        android:buttonTint="@color/colorPrimary"/>
+        android:buttonTint="@color/colorPrimary" />
 
 
     <TextView
@@ -37,6 +39,7 @@
             android:textStyle="bold"
             android:gravity="center"
             android:text="label"
+            android:background="?attr/imageLabelBackground"
             android:textColor="?attr/textColor"
             app:layout_constraintTop_toBottomOf="@id/gridImageView"
             app:layout_constraintLeft_toLeftOf="@id/gridImageView"
