--- a/app/src/main/res/layout/pager_overlay_view.xml
+++ b/app/src/main/res/layout/pager_overlay_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:viewBindingIgnore="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Index"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/white"
         android:background="@drawable/rounded_corners"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:layout_alignParentTop="true"/>
@@ -25,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Label"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/white"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
