--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,9 +2,11 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="20dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:textSize="18sp"
+    tools:viewBindingIgnore="true"
+
     android:padding="10dp"
     android:gravity="center"
-    android:textColor="@color/colorAccent">
-
+    android:textColor="?attr/textColor">
 </TextView>
