--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -9,7 +9,7 @@
 
     <paths>
         <external-path
-            name="my_images"
+            name="images"
             path="Pictures"/>
     </paths>
 
