--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,7 @@
     <dimen name="buttonTextSize">15sp</dimen>
     <dimen name="editTextCornerRadius">1dp</dimen>
     <dimen name="inputTextSize">20sp</dimen>
-    <dimen name="settingsLabelSizes">18dp</dimen>
+    <dimen name="settingsLabelSizes">18sp</dimen>
     <dimen name="grid_expected_size">120dp</dimen>
 
 
